--- a/_posts/2024-04-05-OS-M2.md
+++ b/_posts/2024-04-05-OS-M2.md
@@ -7,7 +7,95 @@ categories: test
 tags: programming courses
 ---
 
-Write at the beginning: this lab is particularly hard! I'm almost desperate...
+Reading the [guide page](https://jyywiki.cn/OS/2024/labs/M2.md) actually takes me a lot of time. This blog will not cover every details in the guide page, but I will share how I implement these coroutine functions and my ideas to this, following my desperate process when doing the lab... Because this lab is quite hard for me as a beginner to Operating Systems. Ultimately, I managed! I think it is of great satisfaction and achievement, so I decide to go on~
 
-## M2: Coroutine Library
+## M2: Coroutine Library (libco)
+
+#### Objective Analysis
+
+First, what is **coroutine**? From wikipedia, we learned that
+
+> **Coroutines** are computer program components that allow execution to be suspended and resumed, generalizing subroutines for cooperative multitasking.
+
+Take-away message is: **coroutines** are cooperative in nature, meaning they yield control *voluntarily*, allowing other coroutines to execute without the need for preemptive scheduling; while **threads** are *preemptive*, meaning the operating system can interrupt their execution and switch to another thread at any time.
+
+In this lab, we need to implement the following three APIs:
+
+```c
+struct co *co_start(const char *name, void (*func)(void *), void *arg);
+void       co_yield();
+void       co_wait(struct co *co);
+```
+
+- `co_start(name, func, arg)`: **creates** a new coroutine and returns a pointer to `struct co`. 
+
+  * The newly created coroutine starts executing from the function `func`, passing the argument `arg`. 
+
+  * Using `malloc` to allocate memory.
+  * Please design the `struct co` structure with more freedom.
+  * The `main` coroutine should also be created and used.
+
+- `co_wait(co)`: the current coroutine needs to **wait** until the coroutine `co` completes execution before continuing. 
+
+  * The `struct co` allocated by `co_start` needs to be freed after the coroutine being waited for ends and before `co_wait()` returns.
+  * Each coroutine can only be waited for by `co_wait` once
+
+- `co_yield()`:  coroutine **switching**. 
+
+  * The coroutine keeps running on the CPU until the `func` function returns or calls `co_yield` to temporarily relinquish execution. 
+  * You can randomly choose one coroutine when there are multiple coroutines available.
+
+More specific details of these will be discussed and analyzed later.
+
+#### Usage of these APIs
+
+There are two tests in ./test/main.c of the libco repository. Let's delve into the first one.
+
+In `main` function, we first set the `stdout` buffer to be NULL, which means no buffer. Note: generally,
+
+* normal file will use *fully buffer* `_IOFBF`
+* `stdin` and `stdout`  will use *line buffer* `_IOLBF`
+* `stderr` will use *no buffering* `_IO_NBF`
+
+And then we will create two coroutines using `co_start` and wait them to execute by `co_wait`.
+
+```c
+int main() {
+    setbuf(stdout, NULL);
+
+    struct co *thd1 = co_start("thread-1", work, "X");
+    struct co *thd2 = co_start("thread-2", work, "Y");
+
+    co_wait(thd1);
+    co_wait(thd2);
+
+    return 0;
+}
+```
+
+Our callback function `work` is a global counter that continuously increment a global variable `g_count`, and then prints the parameters of different coroutines (`X` and `Y`) and the corresponding variable values.
+
+```c
+int g_count = 0;			// a global variable
+static void add_count() {	// WRITE shared memory
+    g_count++;
+}
+static int get_count() {	// READ shared memory
+    return g_count;
+}
+static void work(void *arg) {
+    const char *s = (const char*)arg;
+    for (int i = 0; i < 10; ++i) {
+        printf("%s%d  ", s, get_count());
+        add_count();
+        co_yield();
+    }
+}
+```
+
+We see that in the workloop, the coroutine will call `co_yield()` to switch the current coroutine. Therefore these two coroutine will alternatively print the according string. Our expected output is like:
+
+```c
+XO X1 Y2 X3 X4 X5 X6 X7 X8 Y9 X1O Y11 Y12 Y13 X14 Y15 Y16 Y17 Y18 Y19 Y20
+```
 
